// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default registry is used correctly 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

@company:registry=https://my.registry.com/private
"
`;

exports[`generic prop is set correctly 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

key=value
"
`;

exports[`override default registry via setter 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

registry=https://my.registry.com/mirror2
@company:registry=https://my.registry.com/private
"
`;

exports[`registry is handled correctly 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

registry=https://my.registry.com/mirror
@company:registry=https://my.registry.com/private
"
`;
